Remove lambda layer